--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,17 @@ flask-cors==4.0.0
 flask-socketio==5.3.5
 opencv-python==4.8.1.78
 mediapipe==0.10.8
-numpy==1.24.3
+protobuf==3.20.3
+numpy==1.23.5
+tensorflow==2.15.0
+#numpy==1.24.3
 pyautogui==0.9.54
 python-socketio==5.10.0
 pycaw==20230407
 comtypes==1.2.0
+pycaw==20230407
+comtypes==1.2.0
+
 #scikitlearn
 #seaborn
 
